Correct the backdrop height in ExploreBanner
The backdrop height is set to 100% due to which
the backdrop covers the entire page. Change it to
a fixed height so that it only displays behind the
ExploreBanner.

Adjust the overlay

--- a/src/pages/details/detailsBanner/DetailsBanner.styles.scss
+++ b/src/pages/details/detailsBanner/DetailsBanner.styles.scss
@@ -7,12 +7,16 @@
 
   .detailsBackdropContainer {
     width: 100%;
-    height: 100%;
+    height: 400px;
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0.1;
     overflow: hidden;
+
+    @include md {
+      height: 600px;
+    }
 
     .lazy-load-image-background {
       width: 100%;
